Rename app title to be more specific

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div id="header-container" class="container">
-        <h1 id="app-title">IMS Home Phone Subscriber Service</h1>
+        <h1 id="app-title">IMS Subscriber Service - British Columbia</h1>
     </div>
     <div id="body-container" class="container">
         
