Add create/modify and delete button to frontend

--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,11 @@
             <p class="example">Example B: 1-778-123-4567</p>
             <input id="input-phone" autocomplete="off" placeholder="Enter Phone Number" maxlength="20"></br>
             <div id="message-div"></div></br>
-            <button id="search-button" type="submit">Search</button>
+            <div id="button-container">
+                <button id="put-button" class="app-button" type="submit">Create/Modify</button>
+                <button id="delete-button" class="app-button type="submit">Delete</button>
+                <button id="search-button" class="app-button type="submit">Search</button>
+            </div>
         </form>
     </div>
 </body>
