Implement DELETE frontend logic

--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
             <input id="input-phone" autocomplete="off" placeholder="Enter Phone Number" maxlength="20"></br>
             <div id="message-div"></div></br>
             <div id="button-container">
-                <button id="put-button" class="app-button" type="submit">Create/Modify</button>
+                <button id="create-modify-button" class="app-button" type="submit">Create/Modify</button>
                 <button id="delete-button" class="app-button type="submit">Delete</button>
                 <button id="search-button" class="app-button type="submit">Search</button>
             </div>
